--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -19,6 +19,10 @@
         android:orderInCategory="100"
         android:title="TP SYNTHESE" />
     <item
+        android:id="@+id/action_tpSynthese_sqlite"
+        android:orderInCategory="100"
+        android:title="TP SYNTHESE SQLITE" />
+    <item
         android:id="@+id/action_help"
         android:orderInCategory="100"
         android:title="Aide" />
